# aoc2022

./: Day1.hs  Day10.hs  Day11.hs  Day3.hs  Day4.hs  Day5.hs  Day7.hs  Day8.hs  Day9.hs  README  aoc2022.cabal
